# r-tree

./: .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
src/geometry/: Point3D.h  Triangle3D.h
src/rtree/: MBR.cpp  MBR.h  RTree3D.cpp  RTree3D.h  RTreeInnerNode.h  RTreeLeaf.h  RTreeNode.h
